--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/General.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/General.cshtml
@@ -2,6 +2,130 @@
 @{
     ViewBag.Title = "General";
 }
+<link href="~/Areas/FinalInspection/CSS/FinalInspection.css" rel="stylesheet" />
+@Html.Partial("~/Areas/FinalInspection/Views/Shared/_Inspection_Layout.cshtml")
+<style type="text/css">
 
-<h2>General</h2>
+    div {
+        word-wrap: break-word;
+        word-break: normal;
+    }
 
+    /*        table {
+        border-collapse: collapse;
+    }
+
+    table, th, td {
+        border: 1px solid black;
+    }*/
+
+    .checkboxlabel {
+        font-size: 3vh;
+        font-weight: 900;
+    }
+
+
+    table {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    td {
+        height: 2em
+    }
+
+    .fistTD {
+        width: 70%;
+        text-align: right;
+        vertical-align: middle;
+    }
+
+    .secTD {
+        width: 50%;
+        text-align: center;
+        vertical-align: middle;
+    }
+
+    .al-m {
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        left: 50%;
+    }
+</style>
+
+@model DatabaseObject.ManufacturingExecutionDB.FinalInspection
+
+@using (Html.BeginForm("General", "Inspection", FormMethod.Post,  new {@id="GeneralForm", onsubmit = "return checkValue(this.submitted)" }))
+{
+<div class="DownWhiteBackgrond">
+
+    <table class="al-m" style="width: 48%;">
+        <tr>
+            <td class="fistTD">
+                <div><label class="checkboxlabel" for="FabricApprovalDoc">Fabric Approval</label></div>
+            </td>
+            <td class="secTD">
+                @Html.CheckBox("FabricApprovalDoc", new { @class = "checkboxInput" })
+            </td>
+        </tr>
+        <tr>
+            <td class="fistTD">
+                <div><label class="checkboxlabel" for="SealingSampleDoc">Sealing Sample</label></div>
+            </td>
+            <td class="secTD">
+                @Html.CheckBox("SealingSampleDoc", new { @class = "checkboxInput" })
+            </td>
+        </tr>
+        <tr>
+            <td class="fistTD">
+                <div><label class="checkboxlabel" for="MetalDetectionDoc">Metal Detection</label></div>
+            </td>
+            <td class="secTD">
+                @Html.CheckBox("MetalDetectionDoc", new { @class = "checkboxInput" })
+            </td>
+
+        </tr>
+        <tr>
+            <td class="fistTD">
+                <div><label class="checkboxlabel" for="GarmentWashingDoc">Garment Washing Test</label></div>
+            </td>
+            <td class="secTD">
+                @Html.CheckBox("GarmentWashingDoc", new { @class = "checkboxInput" })
+            </td>
+        </tr>
+    </table>
+    <input type="hidden" id="page" name="page">
+    <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" class="button" style="right:7em;padding: 0;"><p style=" font-size: 12px;">Back To Setting</p></button>
+    <button id="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
+
+</div>
+}
+
+
+<script>
+
+    var msg = new MessagerAlert();
+
+    function checkValue(self) {
+
+        document.getElementById("page").value = self;
+
+        if (self == "Next") {
+            var selected = [];
+            var selectedList = $('input:checkbox:checked');
+            selectedList.each(function () {
+                selected.push($(this).val());
+            });
+
+            if (selected == '') {
+                msg.WithError('These items must be selected before go to next step.!');
+                return false;
+            }
+         
+        }
+
+        return true;
+    }
+
+</script>
