--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
@@ -1,8 +1,215 @@
 ﻿
-@{
 
-    Layout = "~/Areas/FinalInspection/Views/Shared/_Inspection_Layout.cshtml";
+<link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
+<link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
+<link href="~/ThirdParty/plugins/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+<script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
+<link href="~/Areas/FinalInspection/CSS/FinalInspection.css" rel="stylesheet" />
+
+
+
+<style type="text/css">
+
+
+    #myTable_info {
+        color: white
+    }
+
+    #myTable_previous, #myTable_next {
+        color: white !important;
+    }
+
+    #row-name {
+        color: black;
+    }
+
+    .searchFont {
+        font-size: 1.5em;
+        font-weight: 900;
+    }
+
+    .center {
+        margin-top: 0vh;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 1vh;
+    }
+</style>
+
+@model List<DatabaseObject.ProductionDB.Orders>
+
+
+@using (Html.BeginForm("Index", "Inspection", FormMethod.Post, new { onsubmit = "return checkvalue()" }))
+{
+    <div class="search-condition">
+
+        <div class="whiteBackgrond" style="display:flex;flex-wrap:nowrap;height:7vh;align-items:center; vertical-align:middle">
+
+            <table class="center" style="width: 90%;  height: 3vh ">
+                <tr>
+                    <td style="width:1%" align="left">
+                        <p class="searchFont" style="font-size: 18px; font-weight: 900;">SP#</p>
+                    </td>
+                    <td style="width:8%" align="left">
+                        @Html.TextBox("SP", string.Empty, new { style = "border-color:black;" })
+                    </td>
+                    <td style="width:1%" align="left">
+                        <p class="searchFont ">PO#</p>
+                    </td>
+                    <td style="width:8%" align="left">
+                        @Html.TextBox("POID", string.Empty, new { style = "border-color:black;" })
+                    </td>
+
+                    <td style="width:1%" align="left">
+                        <p class="searchFont">Style#</p>
+                    </td>
+                    <td style="width:8%" align="left">
+                        @Html.TextBox("StyleID", string.Empty, new { style = "border-color:black;" })
+                    </td>
+                    <td style="width: 8%; vertical-align: bottom;" align="right">
+
+                        <button type="submit" style="border: 0; background: transparent;">
+                            <img src="~/Image/Icon/Query.png" width="40" height="40" alt="submit" />
+                        </button>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+}
+
+@using (Html.BeginForm("GoSetting", "Inspection", FormMethod.Post, new { onsubmit = "return checkDetail()" }))
+{
+<div class="DownWhiteBackgrond" style="height:80vh" >
+    <div style="border:0px;padding:2vh;">
+        <h1 style="font-size: 3vh; font-weight: 900; color: #999999 ">&nbsp What's SP# you want to inspect?</h1>
+        <div class="content-scroll" style=" height: calc( 100vh - 280px )">
+            <div class="inner-scroll" style="float:left">
+                <div>
+                    <table cellspacing="100" id="myTable" class="table table-striped display">
+                        <thead>
+                            <tr id="row-name" class="row-name" >
+                                <th>SP#</th>
+                                <th>PO#</th>
+                                <th>Qty</th>
+                                <th>Style</th>
+                                <th>Season</th>
+                                <th>Brand</th>
+                                <th>Select</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr class="row-content" style="vertical-align: middle; text-align: center;">
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ID)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.POID)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Qty)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.StyleID)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SeasonID)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.BrandID)
+                                    </td>
+                                    <td>
+                                        <input class="messageCheckbox" type="checkbox" id="checkSelect" value=@Html.DisplayFor(modelItem => item.POID) />
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button style="right:2em;" class="button">Next</button>
+</div>
+
 }
 
 
-INDEX~~~~
+
+<script type="text/javascript">
+
+
+    var msg = new MessagerAlert();
+
+    $(function () {
+
+        $('#myTable').DataTable({
+
+            "pageLength": 10,
+            "filter": false,
+            "paging": true,
+            "scrollY": "49vh",
+            "scrollCollapse": true,
+           
+        });
+    });
+
+
+    function checkvalue() {
+        if ($("#SP").val() == "" || $("#POID").val() == "" || $("#StyleID").val() == "") {
+
+            msg.WithError('Please input ＜SP#＞，＜PO#＞ or ＜Style#＞ first!');
+
+            return false;
+        }
+
+        return true;
+    }
+
+
+
+    function checkDetail() {
+        var selected = [];
+        var selectedList = $('input:checkbox:checked');
+        selectedList.each(function () {
+            selected.push($(this).val());
+        });
+
+        if (selected == '') {
+            msg.WithError('Please select data!');
+            return false;
+        }
+
+
+
+        var checkedValue = [];
+        var inputElements = document.getElementsByClassName('messageCheckbox');
+        for (var i = 0; inputElements[i]; ++i) {
+            if (inputElements[i].checked) {
+                if (checkedValue.indexOf(inputElements[i].value) === -1) {
+                    checkedValue.push(inputElements[i].value);
+                }
+            }
+        }
+
+        if (checkedValue.length > 1) {
+            msg.WithError('Cannot selet multi ＜PO#＞');
+            return false;
+        }
+
+
+        return true;
+    }
+
+
+
+</script>
+
+
+
+
+
+
