--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
@@ -3,5 +3,256 @@
     ViewBag.Title = "Moisture";
 }
 
-<h2>Moisture</h2>
+@model DatabaseObject.ViewModel.FinalInspection.MoistureResult
+@section FinalInspection_head{
 
+}
+<div class="DownLeftWhiteBackgrond">
+    <div style="padding:2em 3em 2em 3em">
+        <div class="col-auto"><h1 style="font-size:2em">Inspection Setting</h1></div>
+        <div>
+            <table class="col-auto table_div" style="width:100%">
+                <tr>
+                    <td><label>Article</label></td>
+                    <td>@Html.DropDownList("Article", (List<SelectListItem>)ViewBag.InspectionStageList, null, new { @class = "form-control", @style = "width:157px", @onchange = "onInspectionStageChange(this.value)" })</td>
+                </tr>
+                <tr>
+                    <td><label>carton#</label></td>
+                    <td>@Html.TextBox("CartonNo", new { @readonly = "readonly", @style = "background-color:gray", @onclick = "open_cartonsDetail()" })</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+<div class="DownRightWhiteBackgrond">
+
+</div>
+
+@section FinalInspection_script
+{
+    <script>
+        var EditMode = false; //彈出視窗設定
+        var msg = new MessagerAlert();
+
+        // 摺疊資料需先轉成array
+        var adata = {};
+        var index = 0;
+        @foreach (var item in Model)
+        {
+            @*@:adata.push(
+                {
+        "FinalInspectionID": "Airi",
+                  "last_name": "Satou",
+                  "position": "Accountant",
+                  "office": "Tokyo",
+                  "start_date": "28th Nov 08",
+                  "salary": "$162,700"
+                }
+            );*@
+        }
+
+        $(function () {
+            $(window).keydown(function (event) {
+                if (event.keyCode == 13) {
+                    event.preventDefault();
+                    return false;
+                }
+            });
+
+            var table = $('#SelectedPOTable').DataTable({
+            data: adata,
+                autoWidth: false,
+                destroy: true,
+                columnDefs: [
+                    { targets: 0, width: "2%", orderable: false },
+                    { targets: 1, width: "98%", orderable: false },
+                ],
+                columns: [
+                    {
+                        "className": "details-control",
+                    },
+                    {
+                        "style":"color:#E62513",
+                    },
+                ],
+                "filter": false,
+                "paging": false,
+                "info": false,
+                "ordering": false,
+                "pageLength": 10,
+                "scrollY": "30vh",
+                "scrollCollapse": true,
+                "createdRow": function (row, data, index) {
+                    $('td', row).css('background-color', '#FAA7A7');
+            }
+        });
+
+        $("#SelectedPOTable tbody").on("click", "td.details-control", function () {
+            var tr = $(this).closest('tr');
+            var row = table.row(tr);
+
+            if (row.child.isShown()) {
+                row.child.hide();
+                tr.removeClass('shown');
+            }
+            else {
+                row.child(format(row.data())).show();
+                tr.addClass('shown');
+            }
+        });
+
+            $('#myTable').DataTable({
+                "pageLength": 5,
+                "autoWidth": false,
+                "info": false,
+                "filter": false,
+                "paging": false,
+                "info": false,
+                "scrollY": "40vh",
+                "scrollCollapse": true,
+                columnDefs: [
+                    { targets: 0, width: "30%" },
+                    { targets: 1, width: "30%" },
+                    { targets: 2, width: "30%" },
+                ]
+            });
+
+
+            $(".detail-dialog").dialog({
+                autoOpen: false,
+                modal: true,
+                closeText: ' ',
+                width: 500,
+                minHeight: 400,
+                position: {
+                    my: "center top",
+                    at: "center top",
+                    of: window
+                },
+                dialogClass: "site-box",
+                open: function (event, ui) {
+                    $('.ui-widget-overlay').bind('click', function () {
+                        //location.reload();//強制Refresh頁面 Benson
+                        $(".ui-dialog-content").dialog('close');
+                    });
+                    $(this).parent().siblings().find(".ui-dialog-content").dialog('close');
+
+                },
+                close: function () {
+                },
+            });
+
+            $(".to-edit-detail").dialog({
+                width: "70%",
+                dialogClass: "add-contact-box",
+                buttons: {
+                    "1": {
+                        text: 'Next',
+                        click: function () {
+
+                            var checkedList = [];
+                            $('[id^=carton_select_]').each(function () {
+                                if ($(this).prop('checked')) {
+                                    checkedList.push($(this).val());
+                                }
+                            });
+
+                            var index = $("#currnetSelectedPO").val();
+                            document.getElementById("SelectedPO[" + index + "].Cartons").value = checkedList.join(',');
+                            $(this).dialog("close");
+                        }
+                        , "class": "button"
+                        , "style": "bottom:0;background-color:#E00000"
+                    },
+                },
+            });
+
+            $(".to-edit-detail").on("dialogclose", function (event, ui) {
+                EditMode = false;
+            });
+
+        });
+
+        function open_cartonsDetail(pkey) {
+            var findValue = pkey.split(',');
+            var rowIndex;
+
+            $('[id^=carton_select_]').each(function () {
+                $(this).prop('checked', false);
+            });
+
+            $(adata).each(function (index, element) {
+                var orderID = element[1];
+                var poID = element[3];
+                if (orderID == findValue[0] && poID == findValue[1]) {
+                    rowIndex = element[2];
+
+                }
+            });
+
+            var cartonList = document.getElementById("SelectedPO[" + rowIndex + "].Cartons").value;
+            var cartonValus = cartonList.split(',');
+            $(cartonValus).each(function () {
+                $('#carton_select_' + this).prop('checked', true);
+            });
+
+            $("#currnetSelectedPO").val(rowIndex);
+            $(".to-edit-detail").dialog("open");
+            $("#myTable").DataTable().columns.adjust();
+        }
+
+        function format(d) {
+            return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
+                '<tr><td>PO#:</td><td>' +
+                '<input type="hidden" name="SelectedPO[' + d[2] + '].ORDERID" id="SelectedPO[' + d[2] + '].ORDERID" value="' + d[1] + '" \/>' +
+                '<input type="hidden" name="SelectedPO[' + d[2] + '].POID" id="SelectedPO[' + d[2] + '].POID" value="' + d[3] + '" \/>' +
+                d[3]+
+                '</td></tr>' +
+                '<tr><td>Style#:</td><td>' + d[4] + '</td></tr>' +
+                '<tr><td>Season:</td><td>' + d[5] + '</td></tr>' +
+                '<tr><td>Brand:</td><td>' + d[6] + '</td></tr>' +
+                '<tr><td>SP# Qty:</td><td>' + d[7] + '</td></tr>' +
+                '<tr><td>Cartons:</td><td>' +
+                '<input type="text" readonly="readonly" style="background-color:gray" onclick="open_cartonsDetail(\'' + d[1] + ',' +d[3]+'\');" name="SelectedPO[' + d[2] + '].Cartons" id="SelectedPO[' + d[2] + '].Cartons" value="' + d[8]+'" />' +
+                '</td></tr>'+
+                '<tr><td>Available Qty:</td><td>' +
+                '<input type="number" name="SelectedPO[' + d[2] + '].AvailableQty" id="SelectedPO[' + d[2] + '].AvailableQty" value="' + d[9]+'" />' +
+                '</td></tr>' +
+                '</table>';
+        }
+
+        function onInspectionStageChange(value) {
+            //選擇 Final或3rd Party時，會把[AQL Plan]變成可編輯，而[Sample Plan Qty]唯讀
+            if (value == "Final" || value == "3rd Party") {
+                $('#SampleSize').prop('disabled', true);
+            }
+
+            //選擇Inline或Stagger時，會把[AQL Plan]變成唯讀並將內容變為空白，而[Sample Plan Qty]可編輯"
+            if (value == "Inline" || value == "Stagger")
+            {
+                $('#SampleSize').prop('disabled', false);
+            }
+        }
+
+        function onSampleSizeChange(value) {
+            // 不可大於 [Total Available Qty]
+            //if ($("#SampleSize").prop("disabled") == false) {
+            //    var totalavailableQtyValue = parseInt($("#totalAvailableQty").text());
+            //    var sampleSizeValue = parseInt(value);
+
+            //    if (sampleSizeValue > totalavailableQtyValue) {
+            //        msg.WithError("[Sample Plan Qty] can not great than [Total Available Qty]");
+            //        return false;
+            //    }
+            //}
+            return true;
+        }
+
+        function checkSubmitValue() {
+            //if (onSampleSizeChange(document.getElementById("InspectionStage").value) == false) {
+            //    return false;
+            //}
+            return true;
+        }
+    </script>
+}
