--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -3,5 +3,421 @@
     ViewBag.Title = "Setting";
 }
 
-<h2>Setting</h2>
+@model DatabaseObject.ViewModel.FinalInspection.Setting
+@section FinalInspection_head{
+    <link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
+    <link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
+    <link href="~/ThirdParty/plugins/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+    <script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
 
+    <style type="text/css">
+        #SelectedPOTable_previous, #SelectedPOTable_next {
+            color: white !important;
+        }
+
+        tr.shown td.details-control {
+            background: url('/Image/Icon/ChildRowClose.png') no-repeat center center;
+        }
+
+        td.details-control {
+            background: url('/Image/Icon/ChildRowOpen.png') no-repeat center center;
+        }
+
+        .whiteBackgrond form {
+            height: 100%
+        }
+
+        .col-auto {
+            margin: 1em
+        }
+
+        .sub_title {
+            font-size: 1.5em;
+            color: #999999
+        }
+
+        .table_div > tbody > tr > td > * {
+            margin: 0.5em;
+        }
+
+        .table_div > tbody > tr > td:first-child {
+            text-align: right;
+            padding-right: 1em;
+            font-weight: bold;
+            vertical-align: middle;
+        }
+
+        .table_div > tbody > tr > td:nth-child(2) {
+            text-align: left;
+        }
+
+        #myTable_info {
+            color: white
+        }
+
+        #myTable_previous, #myTable_next {
+            color: white !important;
+        }
+
+        #myTable_wrapper, #myTable_wrapper > .dataTables_scrollHeadInner {
+            width: 100%
+        }
+    </style>
+}
+
+<div class="whiteBackgrond" style="display:flex;flex-wrap:nowrap;height:85vh;align-items:center; vertical-align:middle">
+    @using (Html.BeginForm("Setting", "Inspection", FormMethod.Post, new { @id = "settingForm", onsubmit = "return checkSubmitValue();" }))
+    {
+        <div style="padding:2em 3em 2em 3em">
+            <div class="col-auto"><h1 style="font-size:2em">Inspection Setting</h1></div>
+            <div style="width:50%;height:25vh;float:left;">
+                <div class="col-auto"><h2 class="sub_title">Basic</h2></div>
+                <table class="col-auto table_div" style="width:100%">
+                    <tr>
+                        <td><label>Choose Inspection Stage</label></td>
+                        <td>@Html.DropDownListFor(o => o.InspectionStage, (List<SelectListItem>)ViewBag.InspectionStageList, null, new { @class = "form-control", @style = "width:157px", @onchange = "onInspectionStageChange(this.value)" })</td>
+                    </tr>
+                    <tr>
+                        <td><label>What's day you audit?</label></td>
+                        <td>@Html.TextBoxFor(o => o.AuditDate, "{0:yyyy/MM/dd}", new { @class = "form-control date-picker" })</td>
+                    </tr>
+                    <tr>
+                        <td><label>What's sewing line you audit?</label></td>
+                        <td>@Html.TextBoxFor(o => o.SewingLineID, new { @class = "form-control center-block" })</td>
+                    </tr>
+                </table>
+            </div>
+            <div style="width:50%;height:25vh;float:left;">
+                <div class="col-auto"><h2 class="sub_title">Inspection Number</h2></div>
+                <div class="col-auto"><label style="padding-left:3em;font-weight:bold">This is <font style="color:#0000ff">@Html.DisplayFor(o => o.InspectionTimes)</font> times to inspect for this PO#</label></div>
+            </div>
+            <div style="width:50%;height:40vh;float:left;">
+                <div class="col-auto"><h2 class="sub_title">Selected PO</h2></div>
+                <div class="col-auto">
+                    <table id="SelectedPOTable" class="cell-border" style="width:100%">
+                    </table>
+                </div>
+                <div class="col-auto" style="text-align:right"><p style="font-weight:bold;padding:10px 0">Total Available Qty<label id="totalAvailableQty">200</label></p></div>
+            </div>
+            <div style="width:50%;height:40vh;float:left;">
+                <div class="col-auto"><h2 class="sub_title">AQL Plan</h2></div>
+                <table class="col-auto table_div" style="width:100%">
+                    <tr>
+                        <td><label>AQL Plan</label></td>
+                        @*<td>@Html.DropDownListFor(o => o.AQLPlan, (List<SelectListItem>)ViewBag.AQLPlanList, null, new { @class = "form-control" })</td>*@
+                    </tr>
+                    <tr>
+                        <td colspan="2" style="text-align:center">
+                            <label style="font-weight:normal;font-size:0.8em">(Inline, Stagger stage can skip AQL Plan, encode below directly)</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label>Sample Plan Qty</label></td>
+                        <td>@Html.TextBoxFor(o => o.SampleSize, new { @type = "number", @class = "form-control center-block", @onchange = "onSampleSizeChange(this.value)" })</td>
+                    </tr>
+                    <tr>
+                        <td><label>Accepted Qty</label></td>
+                        <td>@Html.TextBoxFor(o => o.AcceptQty, new { @type = "number", @class = "form-control center-block" })</td>
+                    </tr>
+                    <tr>
+                        <td><label>Reject Qty</label></td>
+                        <td><label>1234</label></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <!--Detail-Cartons彈出視窗-->
+        <!--多個Table forA001-->
+        <input type="hidden" id="currnetSelectedPO" />
+        <div class="detail-dialog to-edit-detail" title="Detail">
+            <div class="detail-dialog-content dialog-content-w-icon" style="height:40vh">
+                <table cellspacing="100" id="myTable" class="table table-striped display">
+                    <thead>
+                        <tr class="row-name">
+                            <th>Select</th>
+                            <th>Packing List ID</th>
+                            <th>CTN No</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (int i = 0; i < Model.SelectCarton.Count; i++)
+                        {
+                            <tr class="row-content" style="vertical-align: middle; text-align: center;">
+                                <td>
+                                    <input type="checkbox" value="@Model.SelectCarton[i].CTNNo" id="carton_select_@Model.SelectCarton[i].CTNNo">
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(o => Model.SelectCarton[i].PackingListID)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(o => Model.SelectCarton[i].CTNNo)
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+
+                </table>
+                <br />
+                <div>
+                </div>
+            </div>
+        </div>
+        <div style="width:100%">
+            <button class="button" style="right:0">Next</button>
+        </div>
+    }
+
+</div>
+@section FinalInspection_script
+{
+    <script>
+        var EditMode = false; //彈出視窗設定
+        var msg = new MessagerAlert();
+
+        // 摺疊資料需先轉成array
+        var adata = [];
+        var index = 0;
+        @foreach (var item in Model.SelectedPO)
+        {
+            @:adata.push([null, '@item.OrderID', index,'@item.POID', '@item.StyleID', '@item.SeasonID', '@item.BrandID', @item.Qty, '@item.Cartons',@item.AvailableQty]);
+            @:index = index + 1;
+        }
+
+        $(function () {
+            $(window).keydown(function (event) {
+                if (event.keyCode == 13) {
+                    event.preventDefault();
+                    return false;
+                }
+            });
+
+            var table = $('#SelectedPOTable').DataTable({
+            data: adata,
+                autoWidth: false,
+                destroy: true,
+                columnDefs: [
+                    { targets: 0, width: "2%", orderable: false },
+                    { targets: 1, width: "98%", orderable: false },
+                ],
+                columns: [
+                    {
+                        "className": "details-control",
+                    },
+                    {
+                        "style":"color:#E62513",
+                    },
+                ],
+                "filter": false,
+                "paging": false,
+                "info": false,
+                "ordering": false,
+                "pageLength": 10,
+                "scrollY": "30vh",
+                "scrollCollapse": true,
+                "createdRow": function (row, data, index) {
+                    $('td', row).css('background-color', '#FAA7A7');
+            }
+        });
+
+        $("#SelectedPOTable tbody").on("click", "td.details-control", function () {
+            var tr = $(this).closest('tr');
+            var row = table.row(tr);
+
+            if (row.child.isShown()) {
+                row.child.hide();
+                tr.removeClass('shown');
+            }
+            else {
+                row.child(format(row.data())).show();
+                tr.addClass('shown');
+            }
+        });
+
+            $('#myTable').DataTable({
+                "pageLength": 5,
+                "autoWidth": false,
+                "info": false,
+                "filter": false,
+                "paging": false,
+                "info": false,
+                "scrollY": "40vh",
+                "scrollCollapse": true,
+                columnDefs: [
+                    { targets: 0, width: "30%" },
+                    { targets: 1, width: "30%" },
+                    { targets: 2, width: "30%" },
+                ]
+            });
+
+
+            $(".detail-dialog").dialog({
+                autoOpen: false,
+                modal: true,
+                closeText: ' ',
+                width: 500,
+                minHeight: 400,
+                position: {
+                    my: "center top",
+                    at: "center top",
+                    of: window
+                },
+                dialogClass: "site-box",
+                open: function (event, ui) {
+                    $('.ui-widget-overlay').bind('click', function () {
+                        //location.reload();//強制Refresh頁面 Benson
+                        $(".ui-dialog-content").dialog('close');
+                    });
+                    $(this).parent().siblings().find(".ui-dialog-content").dialog('close');
+
+                },
+                close: function () {
+                },
+            });
+
+            $(".to-edit-detail").dialog({
+                width: "70%",
+                dialogClass: "add-contact-box",
+                buttons: {
+                    "1": {
+                        text: 'Next',
+                        click: function () {
+
+                            var checkedList = [];
+                            $('[id^=carton_select_]').each(function () {
+                                if ($(this).prop('checked')) {
+                                    checkedList.push($(this).val());
+                                }
+                            });
+
+                            var index = $("#currnetSelectedPO").val();
+                            document.getElementById("SelectedPO[" + index + "].Cartons").value = checkedList.join(',');
+                            $(this).dialog("close");
+                        }
+                        , "class": "button"
+                        , "style": "bottom:0;background-color:#E00000"
+                    },
+                },
+            });
+
+            $(".to-edit-detail").on("dialogclose", function (event, ui) {
+                EditMode = false;
+            });
+
+        });
+
+        function open_cartonsDetail(pkey) {
+            var findValue = pkey.split(',');
+            var rowIndex;
+
+            $('[id^=carton_select_]').each(function () {
+                $(this).prop('checked', false);
+            });
+
+            $(adata).each(function (index, element) {                
+                var orderID = element[1];
+                var poID = element[3];
+                if (orderID == findValue[0] && poID == findValue[1]) {
+                    rowIndex = element[2];
+                    
+                }
+            });
+
+            var cartonList = document.getElementById("SelectedPO[" + rowIndex + "].Cartons").value;
+            var cartonValus = cartonList.split(',');
+            $(cartonValus).each(function () {
+                $('#carton_select_' + this).prop('checked', true);
+            });
+
+            $("#currnetSelectedPO").val(rowIndex);            
+            $(".to-edit-detail").dialog("open");
+            $("#myTable").DataTable().columns.adjust();
+        }
+
+        function format(d) {
+            return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
+                '<tr><td>PO#:</td><td>' +
+                '<input type="hidden" name="SelectedPO[' + d[2] + '].ORDERID" id="SelectedPO[' + d[2] + '].ORDERID" value="' + d[1] + '" \/>' +
+                '<input type="hidden" name="SelectedPO[' + d[2] + '].POID" id="SelectedPO[' + d[2] + '].POID" value="' + d[3] + '" \/>' +
+                d[3]+
+                '</td></tr>' +
+                '<tr><td>Style#:</td><td>' + d[4] + '</td></tr>' +
+                '<tr><td>Season:</td><td>' + d[5] + '</td></tr>' +
+                '<tr><td>Brand:</td><td>' + d[6] + '</td></tr>' +
+                '<tr><td>SP# Qty:</td><td>' + d[7] + '</td></tr>' +
+                '<tr><td>Cartons:</td><td>' +
+                '<input type="text" readonly="readonly" style="background-color:gray" onclick="open_cartonsDetail(\'' + d[1] + ',' +d[3]+'\');" name="SelectedPO[' + d[2] + '].Cartons" id="SelectedPO[' + d[2] + '].Cartons" value="' + d[8]+'" />' +
+                '</td></tr>'+
+                '<tr><td>Available Qty:</td><td>' +
+                '<input type="number" name="SelectedPO[' + d[2] + '].AvailableQty" id="SelectedPO[' + d[2] + '].AvailableQty" value="' + d[9]+'" />' +
+                '</td></tr>' +
+                '</table>';
+        }
+
+        function onInspectionStageChange(value) {
+            //選擇 Final或3rd Party時，會把[AQL Plan]變成可編輯，而[Sample Plan Qty]唯讀
+            if (value == "Final" || value == "3rd Party") {
+                $('#SampleSize').prop('disabled', true);
+            }
+
+            //選擇Inline或Stagger時，會把[AQL Plan]變成唯讀並將內容變為空白，而[Sample Plan Qty]可編輯"
+            if (value == "Inline" || value == "Stagger")
+            {
+                $('#SampleSize').prop('disabled', false);
+            }
+        }
+
+        function onSampleSizeChange(value) {
+            // 不可大於 [Total Available Qty]
+            if ($("#SampleSize").prop("disabled") == false) {
+                var totalavailableQtyValue = parseInt($("#totalAvailableQty").text());
+                var sampleSizeValue = parseInt(value);
+
+                if (sampleSizeValue > totalavailableQtyValue) {
+                    msg.WithError("[Sample Plan Qty] can not great than [Total Available Qty]");
+                    return false;
+                }
+            }
+            return true;
+        }
+
+        function checkSubmitValue() {
+            if (onSampleSizeChange(document.getElementById("InspectionStage").value) == false) {
+                return false;
+            }
+
+            //保存前檢查[Basic]部分都有輸入，若沒有則顯示
+            if ($("#InspectionStage").val() == "" || $("#AuditDate").val() == "" || $("#SewingLineID").val() == "") {
+                msg.WithError("＜Basic＞ part cannot be empty.");
+                return false;
+            }
+
+            //*保存前檢查[Selected PO]部分都有輸入，若沒有則顯示
+            //<Selected PO> part cannot be empty.
+
+            //*保存前檢查[Accepted Qty]是否有輸入，若沒有則顯示
+            //<Accepted Qty> cannot be empty.
+            if ($("#AcceptQty").val() == "") {
+                msg.WithError("<Accepted Qty> cannot be empty.");
+                return false;
+            }
+
+            //*保存前檢查[Choose Inspection Stage]選擇 Final或3rd Party時，若AQL Plan為空白則顯示
+            //<AQL Plan> cannot be empty.
+            //var inspectionStage = $("#InspectionStage").val();
+            //if (inspectionStage == "Final" || inspectionStage == "3rd Party") {
+            //    if () {
+            //        msg.WithError("<AQL Plan> cannot be empty.");
+            //    }
+            //}
+
+            //*保存前依照AQL Plan選擇項目，若是選擇
+            // -1.0 Level I
+            // -1.0 Level II
+            // -1.5 Level I
+            // -2.5 Level I
+            //請依照AQL Plan中所寫邏輯重抓AcceptableQualityLevels設定資料
+
+            return true;
+        }
+    </script>
+}
