--- a/Quality/Quality/Areas/FinalInspection/Views/_ViewStart.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/_ViewStart.cshtml
@@ -1,5 +1,3 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-
-    //Layout = "~/Areas/FinalInspection/Views/Shared/_Inspection_Layout.cshtml";
+    Layout = "~/Areas/FinalInspection/Views/Shared/_ForAll_Layout.cshtml";
 }
